# AAD_XAI

./: .gitignore  .gitmodules  README.md  RESULTS_LOG.txt  pyproject.toml  requirements.txt
config/: dtu_channel_montage.csv
notebooks/: gce_train_aadnet.py  kaggle_run_xai.ipynb  kaggle_run_xai.py  kaggle_train_aadnet.py
results_trf_vandecappelle2021_linear/: vandecappelle2021_linear_trf_summary.json  vandecappelle2021_linear_trf_summary.md  within_subject_story_speaker_out_trf_single_table.md  within_subject_story_speaker_out_trf_w10p0s.json  within_subject_story_speaker_out_trf_w20p0s.json  within_subject_story_speaker_out_trf_w40p0s.json  within_subject_story_speaker_out_trf_w5p0s.json  within_subject_story_speaker_out_trf_w60p0s.json
results_trf_within_subject_5fold_literature_w10/: within_subject_5fold_trf_single_table.md  within_subject_5fold_trf_summary.json  within_subject_5fold_trf_summary.md  within_subject_5fold_trf_w10p0s.json  within_subject_5fold_trf_w20p0s.json  within_subject_5fold_trf_w40p0s.json  within_subject_5fold_trf_w5p0s.json  within_subject_5fold_trf_w60p0s.json
runs/: config.json
scripts/: DOWNLOAD_LINKS.md  _check_dtu.py  _debug_trf.py  _inspect_dtu.py  _run_shap_only.py  _trf_subject_acc.py  analyse_xai_comparison.py  analyse_xai_results.py  compare_validation_runs.py  explore_kul.py  fix_dedup.py  generate_publication_xai_figures.py  inspect_mat.py  inspect_mat2.py  postprocess_focused_xai.py  regenerate_paper_results_loso.py  regenerate_vandecappelle2021_linear_trf.py  regenerate_within_subject_5fold_trf.py  run_focused_xai.py  (+11 more)
(+1308 files in other folders)
